p2/config/app3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  namespace: part-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: hello-kubernetes-container
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
