p2/config/app3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-three
  namespace: part-2
spec:
  defaultBackend:
      service:
        name: app-three
        port:
          number: 80
